--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js:
   - "node"
 before_script:
-  - "npm install gulp -g"
+  - "npm install yarn -g"
 install:
-  - npm install
+  - yarn
 script:
   - gulp test
